[package]
name = "just-serve"
version = "0.1.0"
edition = "2024"
authors = ["Gordon Stein"]
description = "A simple HTTP server for serving a static directory with CORS support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gsteinLTU/just-serve"
homepage = "https://github.com/gsteinLTU/just-serve"
readme = "README.md"
keywords = ["http", "server", "static", "cors", "cli"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
axum = "0.8.4"
pico-args = "0.5.0"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
